--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+body, html {
+  height: 100%;
+  margin: 0;
+}
 body {
-  @apply bg-[#E7E6DA]; 
+  @apply bg-gradient-to-t from-[#E7E6DA] to-[#02353C]; 
 }
