--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
 body {
-  @apply bg-[#E7E6DA]; 
+  background: linear-gradient(to bottom, #02353C, #E7E6DA);
+  margin: 0;
+  font-family: 'Barlow, SemiBold';
+  color: #fff; 
 }
+
